exercise CSS on placing buttons with SASS and BEM

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main>
-      <form action="" class="form">
+      <form action="" class="form" spellcheck="false">
         <input
           type="text"
           name="activity"
